force-app/main/default/objects/Quote_Document_Table__c/Quote_Document_Table__c.object-meta.xml
<CustomObject>
    <description>One generated table for a Quote, intended for a downstream document. Each record represents a complete table with its own rows and totals. Generated content only - Quote Lines remain the source of truth.</description>
    <label>Quote Document Table</label>
    <nameField>
        <label>Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Document Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>