force-app/main/default/objects/Quote_Document_Table__c/fields/Amount_Basis__c.field-meta.xml
<CustomField>
    <fullName>Amount_Basis__c</fullName>
    <inlineHelpText>The financial basis of all amounts in this table. Two tables with the same structure can carry different meanings, so this value must accompany the generated data.</inlineHelpText>
    <label>Amount Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net Change</fullName>
                <default>true</default>
                <label>Net Change</label>
            </value>
            <value>
                <fullName>Final Value</fullName>
            </value>
            <value>
                <fullName>TCV</fullName>
            </value>
            <value>
                <fullName>ACV</fullName>
            </value>
            <value>
                <fullName>First-Year Value</fullName>
            </value>
            <value>
                <fullName>Remaining-Term Value</fullName>
            </value>
            <value>
                <fullName>Recurring Value</fullName>
            </value>
            <value>
                <fullName>One-Time Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>