force-app/main/default/objects/Quote_Document_Table__c/fields/Amount_Customer__c.field-meta.xml
<CustomField>
    <fullName>Amount_Customer__c</fullName>
    <inlineHelpText>Total the customer pays, including partner-side adjustments. Sum of SBQQ__CustomerTotal__c.</inlineHelpText>
    <label>Customer Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>