force-app/main/default/objects/Quote_Document_Table__c/fields/Amount_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_Discount__c</fullName>
    <inlineHelpText>Total discount applied. Sum of SBQQ__TotalDiscountAmount__c. Stored positive; subtract it from List to reach Net.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>