force-app/main/default/objects/Quote_Document_Table__c/fields/Amount_Final__c.field-meta.xml
<CustomField>
    <fullName>Amount_Final__c</fullName>
    <inlineHelpText>Final value represented by this row or table, interpreted according to Amount Basis.</inlineHelpText>
    <label>Final Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>