force-app/main/default/objects/Quote_Document_Table__c/fields/Amount_List__c.field-meta.xml
<CustomField>
    <fullName>Amount_List__c</fullName>
    <inlineHelpText>Total list price before any discount. Sum of SBQQ__ListTotal__c across the lines this row covers.</inlineHelpText>
    <label>List Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>