force-app/main/default/objects/Quote_Document_Table__c/fields/Amount_Net_Change__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net_Change__c</fullName>
    <inlineHelpText>Signed commercial effect of all changes. Equals the sum of the five classified change measures.</inlineHelpText>
    <label>Net Change Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>