force-app/main/default/objects/Quote_Document_Table__c/fields/Amount_Termination__c.field-meta.xml
<CustomField>
    <fullName>Amount_Termination__c</fullName>
    <inlineHelpText>Total value removed through termination of an active contract. Stored as a negative number.</inlineHelpText>
    <label>Termination Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>