force-app/main/default/objects/Quote_Document_Table__c/fields/Cross_Partition_Total__c.field-meta.xml
<CustomField>
    <fullName>Cross_Partition_Total__c</fullName>
    <inlineHelpText>Copied from the definition so a renderer reading one table knows whether a total across the partitions exists. NONE means it must not print one.</inlineHelpText>
    <label>Cross Partition Total</label>
    <length>20</length>
    <type>Text</type>
</CustomField>