force-app/main/default/objects/Quote_Document_Table__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>Order of this table within the document. Use increments of ten so tables can be inserted later without renumbering.</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>