force-app/main/default/objects/Quote_Document_Table__c/fields/Display_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Display_Subtitle__c</fullName>
    <inlineHelpText>Optional second line under the table heading. Populated only when the table definition supplies one; blank is a normal, valid state.</inlineHelpText>
    <label>Display Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>