force-app/main/default/objects/Quote_Document_Table__c/fields/Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Title__c</fullName>
    <inlineHelpText>The printable heading for this table, snapshotted from the table definition at generation time. This - not Name - is what a document prints. Name carries the quote number so the record is findable in a list view, which would put Q-00063 in the middle of the customer's document. There is no fallback to Table_Name__c: an active definition with no Display Title fails config load, because a silent fallback is how half the tables end up printing an admin-facing name nobody reviewed.</inlineHelpText>
    <label>Display Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>