force-app/main/default/objects/Quote_Document_Table__c/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <inlineHelpText>Narrative text printed BELOW this table, snapshotted from the table definition. Same table-attached scope as Intro Text.</inlineHelpText>
    <label>Footer Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>