force-app/main/default/objects/Quote_Document_Table__c/fields/Generated_On__c.field-meta.xml
<CustomField>
    <fullName>Generated_On__c</fullName>
    <inlineHelpText>When this table was generated. Compare against the Quote's last modified date to spot a table that no longer reflects the Quote.</inlineHelpText>
    <label>Generated On</label>
    <type>DateTime</type>
</CustomField>