force-app/main/default/objects/Quote_Document_Table__c/fields/Group_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Group_Dimensions__c</fullName>
    <inlineHelpText>The grouping applied when this table was generated, outermost first, such as QUOTE_LINE_GROUP &gt; PRODUCT_FAMILY. Recorded for traceability.</inlineHelpText>
    <label>Group Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>