force-app/main/default/objects/Quote_Document_Table__c/fields/Intro_Text__c.field-meta.xml
<CustomField>
    <fullName>Intro_Text__c</fullName>
    <inlineHelpText>Narrative text printed ABOVE this table, snapshotted from the table definition. Table-attached only - standalone document content (introductions, terms, signature instructions) belongs to Quote_Document_Block__c, not here. On OPTIONAL_PRODUCTS this carries the disclaimer that previously existed only as typed text inside a Word template, where no review or translation could reach it.</inlineHelpText>
    <label>Intro Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>