force-app/main/default/objects/Quote_Document_Table__c/fields/Is_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Displayed__c</fullName>
    <inlineHelpText>FALSE means this table generated correctly but must not print. It replaces the renderer-side count() conditional that hid an empty section, so the decision lives in the data where every renderer honours it identically instead of each template re-deriving it. The table is still created, with its Grand Total and counts intact, because those are the evidence generation actually ran - absence of a record cannot be distinguished from a generation that never happened.</inlineHelpText>
    <label>Is Displayed</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>