force-app/main/default/objects/Quote_Document_Table__c/fields/Line_Filter__c.field-meta.xml
<CustomField>
    <fullName>Line_Filter__c</fullName>
    <inlineHelpText>Which Quote Lines this table was built from, such as EXCLUDE_OPTIONAL or OPTIONAL_ONLY. Two tables can group identically and still show different totals because they started from different lines.</inlineHelpText>
    <label>Line Filter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>