force-app/main/default/objects/Quote_Document_Table__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <inlineHelpText>The locale this table's printable text was generated for, e.g. en_US. Added here so the schema settles once; populated in step 03. Part of the fingerprint, so regenerating in a different locale produces a different snapshot rather than silently reusing the previous language.</inlineHelpText>
    <label>Locale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>