force-app/main/default/objects/Quote_Document_Table__c/fields/Measure_Set__c.field-meta.xml
<CustomField>
    <fullName>Measure_Set__c</fullName>
    <inlineHelpText>Which family of measures this table populates: PRICE_WATERFALL (List, Regular, Discount, Net, Customer) or CHANGE (Net New, Cancellation, Replacement, Termination). Measures outside the declared set are left blank, so a document template should print only the columns this value names.</inlineHelpText>
    <label>Measure Set</label>
    <length>40</length>
    <type>Text</type>
</CustomField>