force-app/main/default/objects/Quote_Document_Table__c/fields/Partition_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Partition_Dimension__c</fullName>
    <inlineHelpText>The dimension this table was partitioned on. Diagnostic, like Group_Dimensions__c - it holds an API-facing name and is never printed.</inlineHelpText>
    <label>Partition Dimension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>