force-app/main/default/objects/Quote_Document_Table__c/fields/Partition_Value__c.field-meta.xml
<CustomField>
    <fullName>Partition_Value__c</fullName>
    <inlineHelpText>Which partition this table is - the scenario, entity or department it covers. Blank on an unpartitioned table. Carried as its own field rather than only inside Table_Key__c because a composite key is an identity, not an API: a renderer should not have to parse one.</inlineHelpText>
    <label>Partition Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>