force-app/main/default/objects/Quote_Document_Table__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Total quantity across the lines this row covers. Meaningful only where the lines share a unit of measure.</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>