force-app/main/default/objects/Quote_Document_Table__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <inlineHelpText>The Quote this table was generated from. Required - a table with no Quote is meaningless. Tables are deleted when the Quote is deleted.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Document Tables</relationshipLabel>
    <relationshipName>DocumentTables</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>