force-app/main/default/objects/Quote_Document_Table__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <formula>Quote__r.Name</formula>
    <inlineHelpText>The Quote number this table belongs to. A formula, so it can never drift out of step with the Quote - unlike the table name, which is stamped at generation time.</inlineHelpText>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>