force-app/main/default/objects/Quote_Document_Table__c/fields/Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Row_Count__c</fullName>
    <inlineHelpText>Number of rows written during generation. A consuming system can compare this against the rows it retrieved to detect an incomplete pull.</inlineHelpText>
    <label>Row Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>