force-app/main/default/objects/Quote_Document_Table__c/fields/Source_Identity__c.field-meta.xml
<CustomField><fullName>Source_Identity__c</fullName><description>Stable identity of the metadata, Apex, or Flow source that created this Table.</description><label>Source Identity</label><length>255</length><type>Text</type></CustomField>