force-app/main/default/objects/Quote_Document_Table__c/fields/Source_Version__c.field-meta.xml
<CustomField><fullName>Source_Version__c</fullName><description>Declared content version of the source that created this Table.</description><label>Source Version</label><length>80</length><type>Text</type></CustomField>