force-app/main/default/objects/Quote_Document_Table__c/fields/Table_Code__c.field-meta.xml
<CustomField>
    <fullName>Table_Code__c</fullName>
    <inlineHelpText>Stable identifier for the type of table, such as PRODUCT_FAMILY_SUMMARY. Integrations and document templates must reference this value rather than the table name.</inlineHelpText>
    <label>Table Code</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>