force-app/main/default/objects/Quote_Document_Table__c/fields/Table_Key__c.field-meta.xml
<CustomField>
    <fullName>Table_Key__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique key in the form QuoteId:TableCode. Lets a table be regenerated without creating duplicates.</inlineHelpText>
    <label>Table Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>